# opencl_restrict_analyzer

./: CMakeLists.txt  README.md  main.cpp  test.sh
.github/workflows/: cmake.yml  pr-ci.yml  release.yml
lib/analyzer/: analyzer.cpp  analyzer.h  analyzer_context.cpp  analyzer_context.h  analyzer_parameters.h  ast_consumer.cpp  ast_consumer.h  ast_visitor.cpp  ast_visitor.h  c_api.cpp  c_api.h
lib/analyzer/checkers/: abstract_checker.cpp  abstract_checker.h  address_checker.cpp  address_checker.h  bounds_checker.cpp  bounds_checker.h  race_checker.cpp  race_checker.h  restrict_checker.cpp  restrict_checker.h  violation.h
lib/analyzer/core/: abstract_checker.cpp  abstract_checker.h  analyzer_context.cpp  analyzer_context.h  analyzer_options.h  analyzer_parameters.h  ast_consumer.cpp  ast_consumer.h  ast_visitor.cpp  ast_visitor.h  block.cpp  block.h  memory_access_type.h  optional_value.cpp  optional_value.h  pseudocl.cpp  pseudocl.h  violation.h
lib/analyzer/frontend/: analyzer.cpp  analyzer.h
lib/analyzer/model/: block.cpp  block.h  memory.cpp  memory.h  memory_access_type.h  optional_value.cpp  optional_value.h  scope.cpp  scope.h  var.cpp  var.h
src/: image.cl  test.cl
test/: test_bounds.cpp  test_races.cpp  test_resources.h.in  test_restrict.cpp  test_utils.cpp  test_utils.h
test/resources/: test_bounds.cl  test_one_dnn.cl  test_pipe_cnn.cl  test_restrict.cl  test_simple.cl
test/resources/races/fail/: test_races.cl
test/resources/races/pass/: test_races.cl
